# rdiff-backup

./: .ccmalloc  .cvsignore  .dockerignore  .emacsindent  .gdbinit  .git_archival.txt  .gitignore  .gitmodules  .indent.pro  .lclintrc  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.adoc  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.adoc  CONTRIBUTING.md  COPYING  CTestTestfile.cmake  ChangeLog  DEBUG.adoc  DEVELOP.adoc  DEVELOP.md  Dockerfile  Doxyfile  FAQ-body.html  FAQ.html  HACKING  Makefile  Makefile.am  NEWS  NEWS.md  README  README.CVS  README.RPM  README.adoc  README.autoconf  README.md  (+255 more)
.externalToolBuilders/: rsync.launch
.github/: pull_request_template.md
PCbuild/: PCbuild.dsw  config.h  librsync-config.h  rdiff.dsp
_posts/: 2016-02-25-welcome-to-jekyll.markdown
_site/: acknowledgments.html  docs.html  examples.html  faq.html  features.html  feed.xml  fineprint.html  format.html  index.html  related.html
cmake/: FindPOPT.cmake  Findlibb2.cmake
debian/: README.Debian  README.debian  autobuild.sh  changelog  control  copyright  crontab.ex  dirs  docs  gbp.conf  inetd.conf.ex  info.ex  init.d.ex  librsync-dev.files  manpage.1.ex  menu.ex  rdiff-backup.README.Debian  rdiff-backup.docs  rdiff-backup.manpages  rules  salsa-ci.yml  watch  watch.ex
delta.input/: 01.delta  02.delta  03.delta
doc/: .cvsignore  Doxyfile.in  DoxygenLayout.xml  Makefile.am  callbacks.md  codeheader.c  codeheader.man  codeheader.sh  downloads.md  doxygen.css  extra.dox  footer.html  format.md  gloss.dox  header.html  install.md  librsync.3  librsync.md  librsync.rst  main.dox  rdiff.1  rdiff.dox  rdiff.rst  statemachine.md  statemachine.rst  stats.md  streaming.md  versioning.md  whole.md
docs/: .gitignore  CODING.adoc  CODING.md  DEVELOP.adoc  DEVELOP.md  DOCUMENTATION.adoc  FAQ.adoc  FAQ.md  Gemfile  MacOS-DEVELOP.adoc  README.adoc  THOUGHTS.adoc  Windows-DEVELOP.adoc  Windows-DEVELOP.md  Windows-README.adoc  Windows-README.md  _config.yml  _site_README.adoc  credits.adoc  credits.md  examples.adoc  examples.md  features.adoc  index.adoc  index.html  index.md  migration.adoc  migration.md  rdiff-backup-delete.1.adoc  rdiff-backup-old.1  rdiff-backup-old.1.template  rdiff-backup-statistics.1  rdiff-backup-statistics.1.adoc  rdiff-backup.1  rdiff-backup.1.adoc  rdiff-backup.1.md
in-tricky/: 03  04  06  in-07
librsync/: .ccmalloc  .gitignore  .lclintrc  .travis.yml  AUTHORS  CMakeLists.txt  NEWS.md  README.md  TODO.md  librsync.spec
man/: .cvsignore  Makefile.am  Makefile.in  hsmdfour.1  libhsync.3  rdiff.1
misc/: compress-rdiff-backup-increments.bck  find2dirs  init_files.py  librsync-many-files.py  make-many-data-files.py  myrm  rdiff-backup-delete.py  rdiff-many-files.py  remove-comments.py
mksum.input/: COPYING.sig
popt/: .cvsignore  Makefile.am  system.h
rdiff-backup/: .gitignore  CHANGELOG  CVS-README  FAQ-body.html  FAQ.html  README  TODO  Windows-README.txt  examples-body.html  rdiff-backup  rdiff-backup-statistics  rdiff-backup-statistics.1  rdiff-backup.1  win32_build.py
rdiff-backup.d/: CHANGELOG  examples-body.html  rdiff-backup-statistics
rdiff_backup/: FilenameMapping.py  Globals.py  Hardlink.py  Main.py  Rdiff.py  Security.py  SetConnections.py  TempFile.py  Time.py  _librsyncmodule.c  backup.py  cmodule.c  compare.py  compilec.py  connection.py  eas_acls.py  fs_abilities.py  hash.py  increment.py  iterfile.py  journal.py  lazy.py  librsync.py  librsync_memoryleak2.py  log.py  longname.py  manage.py  memoryleak.c  metadata.py  myrdiff.py  profiled_rdb.py  regress.py  restore.py  robust.py  rorpiter.py  rpath.py  selection.py  statistics.py  user_group.py  win_acls.py
requs/: 00.txt  base.txt  build.txt  linux.txt  optional.txt  test.txt  windows.txt
src/: _librsyncmodule.c  base64.c  blake2-impl.h  blake2b-ref.c  buf.c  buf.h  checksum.c  checksum.h  cmodule.c  command.c  command.h  config.h.cmake  delta.c  emit.c  emit.h  fileutil.c  fileutil.h  hashtable.c  hashtable.h  hex.c  isprefix.c  isprefix.h  job.c  job.h  librsync.h  librsync_export.h  mdfour.c  mdfour.h  mkprototab.pl  mksum.c  msg.c  msvcinttypes.h  netint.c  netint.h  patch.c  prototab.c  prototab.h  rabinkarp.h  rdiff-backup  rdiff-backup-delete  (+25 more)
test-chain/: diff.tmp  empty-sig  newsig.tmp  out.tmp
test-cmds/: .cvsignore
test-decode/: 01-diff  02-diff  03-diff  03-new  04-diff  05-diff  05-new  05-old  README
test-encode/: 01-new  01-out
test-seq/: in-01  in-02  in-03  in-04  in-05  in-06  in-07  in-08
testing/: FilenameMappingtest.py  action_backuprestore_test.py  action_calculate_test.py  action_compare_test.py  action_complete_test.py  action_list_test.py  action_regress_test.py  action_remove_test.py  action_test_test.py  action_verify_test.py  api_test.py  arguments_test.py  backuptest.py  benchmark.py  c_test.py  chdir-wrapper  chdir-wrapper2  cmdline_test.py  cmdlinetest.py  commontest.py  compare_test.py  comparetest.py  connection_test.py  connectiontest.py  coverage_pth.py  ctest.py  destructive_steppingtest.py  eas_acls_test.py  eas_aclstest.py  errorsrecover_test.py  errorsrecovertest.py  filelisttest.py  filename_mapping_test.py  fileset.py  finaltest.py  find-max-ram.py  fs_abilities_test.py  fs_abilitiestest.py  generic_roottest.py  hardlink_test.py  (+67 more)
tests/: CMakeLists.txt  changes.test  delta.test  hashtable_test.c  help.test  isprefix.h  isprefix.test  isprefix_test.c  largefile.test  mutate.pl  mutate.test  performance.test  rabinkarp_test.c  rdiff_bad_option.sh  rollsum_test.c  signature.test  sumset_test.c  testcommon.sh  triple.test
testsuite/: .cvsignore  ChangeLog  Makefile.am  changes.test  delta.test  driver.sh  help.test  isprefix.driver.c  isprefix.test  mdfour.test  mksum.test  mutate.test  signature.test  sources.test  testcommon.sh  triple.test
testsuite/changes.input/: 04.in
tools/: build-linux.sh  build_wheels.sh  check_links_in_adoc.py  create_venv.sh  dump_rdiff-backup.sh  get_changelog_since.sh  get_pip_freeze.py  get_project_metadata.py  hook-rdiffbackup.actions_mgr.py  makedist  (+19 more)
tools/coverage_pth/: MANIFEST.in  pyproject.toml
(+1199 files in other folders)
