## Process this file with automake to produce Makefile.in

# Copyright (C) 2000, 2001, 2002 by Martin Pool <mbp@samba.org>
# $Id$

# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public
# License along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.


			      # Thus spake the master programmer:
			      # 
			      # ``When the program is being tested, it
			      # is too late to make design changes.''

SUBDIRS = doc

include_HEADERS = rsync.h

lib_LTLIBRARIES = librsync.la

librsync_la_SOURCES = \
	base64.c buf.c buf.h checksum.c checksum.h command.c \
	command.h delta.c emit.c emit.h fileutil.c fileutil.h \
	hex.c job.c job.h mdfour.c mdfour.h mksum.c msg.c netint.c netint.h \
	patch.c protocol.h prototab.c prototab.h readsums.c rsync.h \
	scoop.c search.c search.h stats.c stream.c stream.h sumset.c \
	sumset.h trace.c trace.h tube.c types.h util.c util.h \
	version.c whole.c whole.h

# See libversions.txt and the libtool manual for an explanation of the
# library versioning
librsync_la_LDFLAGS = -version-info 1:1:0

# TODO: If we ever care enough, build a second library containing only
# the code necessary to be a client, and not stuff for encoding.  At
# the moment it doesn't seem worth the additional compilation time to
# do both, and I don't know if anyone will care if they're just shared
# libraries anyhow.

EXTRA_DIST = $(noinst_SCRIPTS) librsync.spec README.CVS libversions.txt

# This is the default for any programs that don't specify a
# preference.
LDADD = librsync.la $(LIBOBJS)

# Eventually we might want to install some of these into system
# directories, but they're pretty obscure and it's hard to imagine any
# end users wanting to run them.  So for the time being they are not
# installed.

noinst_PROGRAMS = rdiff
noinst_SCRIPTS = mkprototab.pl

rdiff_SOURCES = rdiff.c isprefix.c isprefix.h rsync.h trace.h
rdiff_LDADD = @BUILD_POPT@ librsync.la
rdiff_DEPENDENCIES = @BUILD_POPT@ librsync.la

# Autogenerated by a script.
prototab.c prototab.h: $(srcdir)/mkprototab.pl
	perl $(srcdir)/mkprototab.pl prototab.c prototab.h
