## Process this file with automake to produce Makefile.in

# Copyright (C) 2000, 2001, 2002 by Martin Pool <mbp@samba.org>
# $Id$

# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public
# License along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

AUTOMAKE_OPTIONS = foreign
SUBDIRS = doc popt testsuite
MAINTAINERCLEANFILES = Makefile.in \
	aclocal.m4 config.guess config.h.in config.sub configure \
	depcomp install-sh ltmain.sh missing mkinstalldirs \
	prototab.c prototab.h ChangeLog

include_HEADERS = librsync.h librsync-config.h

lib_LTLIBRARIES = librsync.la

librsync_la_SOURCES =  prototab.c prototab.h \
	base64.c buf.c buf.h checksum.c checksum.h command.c \
	command.h delta.c emit.c emit.h fileutil.c fileutil.h \
	hex.c job.c job.h mdfour.c mdfour.h mksum.c msg.c netint.c netint.h \
	patch.c protocol.h readsums.c librsync.h librsync-config.h \
	scoop.c search.c search.h stats.c stream.c stream.h sumset.c \
	sumset.h trace.c trace.h tube.c types.h util.c util.h \
	version.c whole.c whole.h snprintf.h

librsync_la_LIBADD = @LIBOBJS@

librsync_la_LDFLAGS = -version-info @librsync_libversion@

# TODO: If we ever care enough, build a second library containing only
# the code necessary to be a client, and not stuff for encoding.  At
# the moment it doesn't seem worth the additional compilation time to
# do both, and I don't know if anyone will care if they're just shared
# libraries anyhow.

EXTRA_DIST = autogen.sh configure.msc $(noinst_SCRIPTS) rdiff.magic \
	librsync.spec README.CVS README.RPM libversions.txt ChangeLog \
	PCbuild/rdiff.dsp PCbuild/PCbuild.dsw   PCbuild/config.h \
	PCbuild/librsync-config.h

# This is the default for any programs that don't specify a
# preference.
LDADD = librsync.la

# Eventually we might want to install some of these into system
# directories, but they're pretty obscure and it's hard to imagine any
# end users wanting to run them.  So for the time being they are not
# installed.

noinst_PROGRAMS = rdiff
noinst_SCRIPTS = mkprototab.pl

rdiff_SOURCES = rdiff.c isprefix.c isprefix.h librsync.h librsync-config.h trace.h
rdiff_LDADD = @BUILD_POPT@ librsync.la
rdiff_DEPENDENCIES = @BUILD_POPT@ librsync.la

# Autogenerated by a script.
prototab.c prototab.h: $(srcdir)/mkprototab.pl
	perl $(srcdir)/mkprototab.pl prototab.c prototab.h

# Rule to build popt if needed.
popt/libpopt.a:
	(cd popt && $(MAKE) $(AM_MAKEFLAGS) libpopt.a)

# Autogenerated by cvs2cl from CVS commits.
ChangeLog:
	cvs2cl -g "-z6"
